--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440738-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -62,7 +66,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931536'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ruelala/jobs/1931536'>Job Application for Principal Front-End Engineer at Rue Gilt Groupe</a></h5> 
 <p><span class="badge badge-light">Boston, MAUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -157,7 +161,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://accelerit.breezy.hr/p/0d1d66a18ac801-front-end-developer-with-react-up-to-20k-pln-monthly?utm_content=bufferbebf3&utm_medium=social&utm_source=linkedin.com&utm_campaign=buffer'>Front-End Developer with React (up to 20k PLN monthly) at Instantor</a></h5> 
+<h5><a href='https://accelerit.breezy.hr/p/0d1d66a18ac801-front-end-developer-with-react-up-to-20k-pln-monthly?utm_content=bufferbebf3&utm_medium=social&utm_source=linkedin.com&utm_campaign=buffer'>Front-End Developer with React (up to 20k PLN monthly) at Instantor</a></h5> 
 <p><span class="badge badge-light">Warsaw Stockholm</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -189,7 +193,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -249,7 +253,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/PgTcQsNt2N/Sales-Tools-FrontEnd-Engineer'>Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/PgTcQsNt2N/Sales-Tools-FrontEnd-Engineer'>Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -283,11 +287,11 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">California  Pleasanton, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/466362-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
+<h5><a href='https://finanzchef24.join.com/jobs/466362-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/465376-senior-frontend-engineer-react-js-redux'>Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -319,7 +323,7 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -423,7 +427,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698252320-software-engineer-frontend-web-'>Airy Rooms Software Engineer - Frontend (Web) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698252320-software-engineer-frontend-web-'>Airy Rooms Software Engineer - Frontend (Web) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -457,10 +461,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242830-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243028-frontend-developer-m-f-x-'>Netcentric Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
